<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthenticationActivity">

    <TextView
        android:id="@+id/clayAppRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="37dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/clayapp"
        android:textColor="@color/base_black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textPasswordRegistration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="48"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/base_black"
        android:textColorHighlight="@color/base_shady2"
        android:textColorHint="@color/base_shady2"
        android:textColorLink="@color/base_yellow"
        android:textCursorDrawable="@drawable/yellow_cursor"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/repeatPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:hint="@string/repeat_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="48"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/base_black"
        android:textColorHighlight="@color/base_shady2"
        android:textColorHint="@color/base_shady2"
        android:textColorLink="@color/base_yellow"
        android:textCursorDrawable="@drawable/yellow_cursor"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/addScheduleButtonRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textEmailRegistration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:hint="@string/user_name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLength="48"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/base_black"
        android:textColorHighlight="@color/base_shady2"
        android:textColorHint="@color/base_shady2"
        android:textColorLink="@color/base_yellow"
        android:textCursorDrawable="@drawable/yellow_cursor"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textPasswordRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/enterCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:gravity="start|top"
        android:hint="@string/enter_code"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="48"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/base_black"
        android:textColorHighlight="@color/base_shady2"
        android:textColorHint="@color/base_shady2"
        android:textColorLink="@color/base_yellow"
        android:textCursorDrawable="@drawable/yellow_cursor"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textEmailRegistration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addScheduleButtonRegistration"
        android:layout_width="154dp"
        android:layout_height="38dp"
        android:layout_marginBottom="155dp"
        android:background="@drawable/button_text_shape_violet"
        android:fontFamily="@font/inter_regular"
        android:text="@string/continue_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/base_white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/already_have_an_account"
        android:textColor="@color/base_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signInRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/sign_in"
        android:textColor="@color/base_violet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/messageSendCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="24dp"
        android:text="@string/email_code"
        android:textColor="@color/base_black"
        app:layout_constraintBottom_toTopOf="@+id/enterCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resendCodeTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="00:00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addScheduleButtonRegistration" />

    <TextView
        android:id="@+id/resendCodeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/resend_code"
        android:textColor="@color/base_black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resendCodeTimer" />

    <CheckBox
        android:id="@+id/iAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/i_agree_to_the"
        app:layout_constraintStart_toStartOf="@+id/repeatPassword"
        app:layout_constraintTop_toBottomOf="@+id/repeatPassword" />

    <TextView
        android:id="@+id/policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:textColor="@color/base_black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iAgree"
        app:layout_constraintStart_toEndOf="@+id/iAgree"
        app:layout_constraintTop_toTopOf="@+id/iAgree" />

</androidx.constraintlayout.widget.ConstraintLayout>