<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activities.SetPeriodActivity">

    <Button
        android:id="@+id/comleteSetPeriod"
        android:layout_width="102dp"
        android:layout_height="36dp"
        android:layout_marginBottom="83dp"
        android:background="@drawable/button_text_shape"
        android:fontFamily="@font/inter_regular"
        android:text="@string/save_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/base_black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dayOfWeekLayout"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupMode">

        <Button
            android:id="@+id/mondayBtn"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"

            android:background="@drawable/calendar_inactive_button"
            android:fontFamily="@font/inter_regular"
            android:text="@string/monday"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/base_black"
            android:textSize="14sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tuesdayBtn"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/calendar_inactive_button"
            android:fontFamily="@font/inter_regular"
            android:shadowColor="#000"


            android:shadowDx="1"
            android:shadowDy="1"
            android:text="@string/tuesday"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/base_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mondayBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/wednesdayBth"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/calendar_inactive_button"
            android:fontFamily="@font/inter_regular"
            android:shadowColor="#000"


            android:shadowDx="1"
            android:shadowDy="1"
            android:text="@string/wednesday"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/base_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tuesdayBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/thursdayBtn"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/calendar_inactive_button"
            android:fontFamily="@font/inter_regular"
            android:shadowColor="#000"


            android:shadowDx="1"
            android:shadowDy="1"
            android:text="@string/thursday"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/base_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/wednesdayBth"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fridayBtn"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/calendar_inactive_button"
            android:fontFamily="@font/inter_regular"
            android:shadowColor="#000"


            android:shadowDx="1"
            android:shadowDy="1"
            android:text="@string/friday"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/base_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/thursdayBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/saturdayBtn"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/calendar_inactive_button"
            android:fontFamily="@font/inter_regular"
            android:shadowColor="#000"


            android:shadowDx="1"
            android:shadowDy="1"
            android:text="@string/saturday"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/base_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fridayBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sundayBtn"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/calendar_inactive_button"
            android:fontFamily="@font/inter_regular"


            android:shadowColor="#000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:text="@string/sunday"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/base_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/saturdayBtn"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/inter_regular"

        android:text="@string/notification_time"
        android:textColor="@color/base_black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TimePicker

        android:id="@+id/setTimePicker"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"


        android:layout_marginTop="18dp"
        android:amPmTextColor="@color/base_yellow"
        android:backgroundTint="#FFFFFF"
        android:headerBackground="#fff171"
        android:headerTimeTextAppearance="@style/TextAppearance.AppCompat.Small"
        android:numbersBackgroundColor="@color/base_shady2"
        android:numbersSelectorColor="@color/base_yellow"
        android:numbersTextColor="@color/base_black"
        android:timePickerMode="clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayOfWeekLayout"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioGroupMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radioButtonDaily"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@color/base_yellow"
            android:text="@string/everyday" />

        <RadioButton
            android:id="@+id/radioButtonWeekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/base_yellow"
            android:checked="true"
            android:text="@string/day_of_week"
            android:textColorHighlight="@color/base_yellow"
            android:textColorLink="@color/base_yellow" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>