<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FavoriteFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/mondayBtn"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/calendar_inactive_button"
                android:elevation="8dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/monday"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/base_black"
                android:textSize="14sp"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/tuesdayBtn"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/calendar_inactive_button"
                android:fontFamily="@font/inter_regular"
                android:shadowColor="#000"


                android:shadowDx="1"
                android:shadowDy="1"
                android:text="@string/tuesday"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/base_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mondayBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/wednesdayBth"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/calendar_inactive_button"
                android:fontFamily="@font/inter_regular"
                android:shadowColor="#000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:text="@string/wednesday"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/base_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tuesdayBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/thursdayBtn"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/calendar_inactive_button"
                android:fontFamily="@font/inter_regular"
                android:shadowColor="#000"


                android:shadowDx="1"
                android:shadowDy="1"
                android:text="@string/thursday"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/base_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/wednesdayBth"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/fridayBtn"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/calendar_inactive_button"
                android:fontFamily="@font/inter_regular"
                android:shadowColor="#000"


                android:shadowDx="1"
                android:shadowDy="1"
                android:text="@string/friday"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/base_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/thursdayBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/saturdayBtn"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/calendar_inactive_button"
                android:fontFamily="@font/inter_regular"
                android:shadowColor="#000"


                android:shadowDx="1"
                android:shadowDy="1"
                android:text="@string/saturday"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/base_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fridayBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/sundayBtn"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/calendar_inactive_button"
                android:fontFamily="@font/inter_regular"


                android:shadowColor="#000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:text="@string/sunday"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/base_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/saturdayBtn"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>